[package]
name = "axia-node-subsystem-test-helpers"
version = "0.9.17"
authors = ["Axia Technologies <admin@axia.io>"]
edition = "2018"
description = "Subsystem traits and message definitions"

[dependencies]
async-trait = "0.1.52"
futures = "0.3.21"
parking_lot = "0.11.1"
axia-node-subsystem = { path = "../subsystem" }
axia-node-subsystem-util = { path = "../subsystem-util" }
axia-primitives = { path = "../../primitives" }
sp-core = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-keystore = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sc-keystore = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-keyring = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-application-crypto = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }

[dev-dependencies]
axia-overseer = { path = "../overseer" }
