[package]
name = "axia-node-subsystem-test-helpers"
version = "0.9.17"
authors = ["Axia Technologies <admin@axia.io>"]
edition = "2018"
description = "Subsystem traits and message definitions"

[dependencies]
async-trait = "0.1.52"
futures = "0.3.21"
parking_lot = "0.11.1"
axia-node-subsystem = { path = "../subsystem" }
axia-node-subsystem-util = { path = "../subsystem-util" }
axia-primitives = { path = "../../primitives" }
sp-core = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sp-keystore = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sc-keystore = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sp-keyring = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sp-application-crypto = { git = "https://github.com/axtend/axlib", branch = "axlib" }

[dev-dependencies]
axia-overseer = { path = "../overseer" }
