[package]
name = "axia-node-subsystem-types"
version = "0.9.17"
authors = ["Axia Technologies <admin@axia.io>"]
edition = "2018"
description = "Subsystem traits and message definitions"

[dependencies]
derive_more = "0.99.17"
futures = "0.3.21"
axia-primitives = { path = "../../primitives" }
axia-node-primitives = { path = "../primitives" }
axia-node-network-protocol = { path = "../network/protocol" }
axia-statement-table = { path = "../../statement-table" }
axia-node-jaeger = { path = "../jaeger" }
axia-overseer-gen = { path = "../overseer/overseer-gen" }
sc-network = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
smallvec = "1.6.1"
axlib-prometheus-endpoint = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
thiserror = "1.0.30"
