[package]
name = "axia-node-subsystem-types"
version = "0.9.17"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
description = "Subsystem traits and message definitions"

[dependencies]
derive_more = "0.99.17"
futures = "0.3.21"
axia-primitives = { path = "../../primitives" }
axia-node-primitives = { path = "../primitives" }
axia-node-network-protocol = { path = "../network/protocol" }
axia-statement-table = { path = "../../statement-table" }
axia-node-jaeger = { path = "../jaeger" }
axia-overseer-gen = { path = "../overseer/overseer-gen" }
sc-network = { git = "https://github.com/purestake/substrate", branch = "moonbeam-axia-v0.9.17" }
smallvec = "1.6.1"
substrate-prometheus-endpoint = { git = "https://github.com/purestake/substrate", branch = "moonbeam-axia-v0.9.17" }
thiserror = "1.0.30"
