[package]
name = "axia-node-subsystem"
version = "0.9.17"
authors = ["Axia Technologies <admin@axia.io>"]
edition = "2018"
description = "Subsystem traits and message definitions and the generated overseer"

[dependencies]
axia-overseer = { path = "../overseer" }
axia-node-subsystem-types = { path = "../subsystem-types" }
axia-node-jaeger = { path = "../jaeger" }
