[package]
name = "axia-primitives-test-helpers"
version = "0.9.17"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"

[dependencies]
sp-keyring = { git = "https://github.com/purestake/substrate", branch = "moonbeam-axia-v0.9.17" }
sp-application-crypto = { package = "sp-application-crypto", git = "https://github.com/purestake/substrate", default-features = false , branch = "moonbeam-axia-v0.9.17" }
sp-runtime = { git = "https://github.com/purestake/substrate", branch = "moonbeam-axia-v0.9.17" }
axia-primitives = { path = "../" }
