[package]
name = "polkadot-runtime-allychains"
version = "0.9.17"
authors = ["Axia Technologies <admin@axia.io>"]
edition = "2018"

[dependencies]
bitvec = { version = "0.20.1", default-features = false, features = ["alloc"] }
parity-scale-codec = { version = "2.3.1", default-features = false, features = ["derive"] }
log = { version = "0.4.14", default-features = false }
rustc-hex = { version = "2.1.0", default-features = false }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.136", features = [ "derive" ], optional = true }
derive_more = "0.99.17"
bitflags = "1.3.2"

sp-api = { git = "https://github.com/axtend/axlib", default-features = false , branch = "c92f69d" }
inherents = { package = "sp-inherents", git = "https://github.com/axtend/axlib", default-features = false , branch = "c92f69d" }
sp-std = { package = "sp-std", git = "https://github.com/axtend/axlib", default-features = false , branch = "c92f69d" }
sp-io = { git = "https://github.com/axtend/axlib", default-features = false , branch = "c92f69d" }
sp-runtime = { git = "https://github.com/axtend/axlib", default-features = false , branch = "c92f69d" }
sp-session = { git = "https://github.com/axtend/axlib", default-features = false , branch = "c92f69d" }
sp-staking = { git = "https://github.com/axtend/axlib", default-features = false , branch = "c92f69d" }
sp-core = { git = "https://github.com/axtend/axlib", default-features = false , branch = "c92f69d" }
sp-keystore = { git = "https://github.com/axtend/axlib", optional = true , branch = "c92f69d" }
sp-tracing = { version = "4.0.0-dev", git = "https://github.com/axtend/axlib", default-features = false, optional = true , branch = "c92f69d" }

pallet-authority-discovery = { git = "https://github.com/axtend/axlib", default-features = false , branch = "c92f69d" }
pallet-authorship = { git = "https://github.com/axtend/axlib", default-features = false , branch = "c92f69d" }
pallet-balances = { git = "https://github.com/axtend/axlib", default-features = false , branch = "c92f69d" }
pallet-babe = { git = "https://github.com/axtend/axlib", default-features = false , branch = "c92f69d" }
pallet-session = { git = "https://github.com/axtend/axlib", default-features = false , branch = "c92f69d" }
pallet-staking = { git = "https://github.com/axtend/axlib", default-features = false , branch = "c92f69d" }
pallet-timestamp = { git = "https://github.com/axtend/axlib", default-features = false , branch = "c92f69d" }
pallet-vesting = { git = "https://github.com/axtend/axlib", default-features = false , branch = "c92f69d" }
frame-benchmarking = { git = "https://github.com/axtend/axlib", default-features = false, optional = true , branch = "c92f69d" }
frame-support = { git = "https://github.com/axtend/axlib", default-features = false , branch = "c92f69d" }
frame-system = { git = "https://github.com/axtend/axlib", default-features = false , branch = "c92f69d" }

xcm = { package = "xcm", path = "../../xcm", default-features = false }
xcm-executor = { package = "xcm-executor", path = "../../xcm/xcm-executor", default-features = false }
primitives = { package = "polkadot-primitives", path = "../../primitives", default-features = false }

rand = { version = "0.8.3", default-features = false }
rand_chacha = { version = "0.3.1", default-features = false }
static_assertions = { version = "1.1.0", optional = true }
polkadot-runtime-metrics = { path = "../metrics", default-features = false}

[dev-dependencies]
futures = "0.3.21"
hex-literal = "0.3.4"
keyring = { package = "sp-keyring", git = "https://github.com/axtend/axlib", branch = "c92f69d" }
frame-support-test = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sc-keystore = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
test-helpers = { package = "polkadot-primitives-test-helpers", path = "../../primitives/test-helpers"}
sp-tracing = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
thousands = "0.2.0"
assert_matches = "1"

[features]
default = ["std"]
no_std = []
std = [
	"bitvec/std",
	"parity-scale-codec/std",
	"rustc-hex/std",
	"scale-info/std",
	"serde",
	"primitives/std",
	"inherents/std",
	"sp-core/std",
	"sp-api/std",
	"sp-keystore",
	"sp-std/std",
	"sp-io/std",
	"frame-support/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-staking/std",
	"pallet-authorship/std",
	"pallet-babe/std",
	"pallet-balances/std",
	"pallet-session/std",
	"pallet-staking/std",
	"pallet-timestamp/std",
	"pallet-vesting/std",
	"frame-system/std",
	"xcm/std",
	"xcm-executor/std",
	"log/std",
	"polkadot-runtime-metrics/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"primitives/runtime-benchmarks",
	"static_assertions",
]
try-runtime = [
	"frame-support/try-runtime",
	"pallet-authorship/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-session/try-runtime",
	"pallet-staking/try-runtime",
	"pallet-timestamp/try-runtime",
	"pallet-vesting/try-runtime",
]
runtime-metrics = ["sp-tracing/with-tracing", "polkadot-runtime-metrics/runtime-metrics"]
